# RBMC

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml  x.py
.cargo/: config.toml
benchmark/: x.py
bmc-driver/: Cargo.toml
rbmc-driver/: Cargo.toml
rbmc-driver/src/: main.rs
rbmc-driver/src/bmc/: bmc.rs
rbmc-driver/src/config/: cli.rs  config.rs
rbmc-driver/src/expr/: ast.rs  constant.rs  context.rs  expr.rs  guard.rs  mod.rs  op.rs  simplify.rs  ty.rs
rbmc-driver/src/program/: function.rs  program.rs
rbmc-driver/src/solvers/: solver.rs
rbmc-driver/src/solvers/smt/: mod.rs  smt_conv.rs  smt_datatype.rs  smt_memspace.rs
rbmc-driver/src/solvers/z3/: mod.rs  z3_conv.rs  z3_datatype.rs  z3_memspace.rs
rbmc-driver/src/symbol/: mod.rs  nstring.rs  symbol.rs
rbmc-driver/src/symex/: exec_state.rs  frame.rs  mod.rs  namespace.rs  place_state.rs  projection.rs  renaming.rs  state.rs  symex.rs  symex_assert.rs  symex_assign.rs  symex_branch.rs  symex_builtin.rs  symex_cast.rs  symex_drop.rs  symex_function.rs  symex_memory.rs  symex_move.rs  symex_util.rs  value_set.rs
rbmc-driver/src/symex/symex_core/: mod.rs
rbmc-driver/src/symex/symex_modules/: mod.rs  symex_alloc.rs  symex_boxed.rs  symex_ops.rs  symex_ptr.rs  symex_vec.rs
rbmc-driver/src/symex/symex_std/: mod.rs  symex_alloc.rs  symex_boxed.rs  symex_ops.rs  symex_ptr.rs
rbmc-driver/src/vc/: slicer.rs  vc.rs
src/: analysis.rs  cargo-mirv.rs  config.rs  lib.rs  main.rs  mirv.rs  program.rs  renaming.rs  state.rs  symex.rs
tests/: case_0.rs  case_3.rs  case_4.rs  case_5.rs  (+3 more)
(+151 files in other folders)
